--- a/lib/pop-window/kayit_ekle.ui
+++ b/lib/pop-window/kayit_ekle.ui
@@ -445,7 +445,7 @@
       <item>
        <widget class="QLabel" name="kitap_son_teslim_tarihi_label">
         <property name="text">
-         <string>Kitap Son Teslim Tarihi (Gün/Ay/Yıl [28/05/2023] gibi)</string>
+         <string>Kitap Son Teslim Tarihi (Yıl/Ay/Gün şeklinde (2023/05/28 gibi))</string>
         </property>
        </widget>
       </item>
@@ -471,6 +471,18 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <tabstops>
+  <tabstop>id_lineEdit</tabstop>
+  <tabstop>isim_soyisim_lineEdit</tabstop>
+  <tabstop>sinif_comboBox</tabstop>
+  <tabstop>numara_lineEdit</tabstop>
+  <tabstop>kitap_ismi_lineEdit</tabstop>
+  <tabstop>kitap_yazari_lineEdit</tabstop>
+  <tabstop>kitaplik_comboBox</tabstop>
+  <tabstop>kitap_rafi_comboBox</tabstop>
+  <tabstop>kitap_son_teslim_tarihi_lineEdit</tabstop>
+  <tabstop>btnKayitEkle</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
