Ana pencere başlığı değiştirildi.

--- a/lib/window/window.ui
+++ b/lib/window/window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>801</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Kütüphane Kayıt Sistemi</string>
+   <string>Kütüphane Yönetim Sistemi</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
