--- a/lib/pop-window/kayit_ekle.ui
+++ b/lib/pop-window/kayit_ekle.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>732</width>
-    <height>800</height>
+    <width>700</width>
+    <height>412</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>700</width>
-    <height>800</height>
+    <height>412</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>700</width>
+    <height>412</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -21,69 +27,36 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="0">
-     <widget class="QPushButton" name="btnKayitEkle">
-      <property name="text">
-       <string>Kayıt Ekle</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QLabel" name="id_label">
-        <property name="text">
-         <string>ID</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="id_lineEdit"/>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="isim_soyisim_label">
-        <property name="text">
-         <string>İsim - Soyisim</string>
-        </property>
-       </widget>
-      </item>
-      <item>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="3" column="1">
        <widget class="QLineEdit" name="isim_soyisim_lineEdit"/>
       </item>
-      <item>
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="sinif_label">
-        <property name="text">
-         <string>Sınıf</string>
-        </property>
+      <item row="19" column="1">
+       <widget class="QComboBox" name="kitap_rafi_comboBox">
+        <item>
+         <property name="text">
+          <string>1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>3</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>4</string>
+         </property>
+        </item>
        </widget>
       </item>
-      <item>
+      <item row="6" column="1">
        <widget class="QComboBox" name="sinif_comboBox">
         <item>
          <property name="text">
@@ -192,96 +165,89 @@
         </item>
        </widget>
       </item>
-      <item>
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="numara_label">
-        <property name="text">
-         <string>Numara</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="numara_lineEdit"/>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="kitap_ismi_label">
-        <property name="text">
-         <string>Kitap İsmi</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="kitap_ismi_lineEdit"/>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_5">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="kitap_yazari_label">
-        <property name="text">
-         <string>Kitap Yazarı</string>
-        </property>
-       </widget>
-      </item>
-      <item>
+      <item row="14" column="1">
        <widget class="QLineEdit" name="kitap_yazari_lineEdit"/>
       </item>
-      <item>
-       <spacer name="horizontalSpacer_6">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="id_lineEdit"/>
       </item>
-      <item>
-       <widget class="QLabel" name="kitaplik_label">
+      <item row="21" column="1">
+       <widget class="QLineEdit" name="kitap_son_teslim_tarihi_lineEdit">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
-         <string>Kitaplık</string>
+         <string/>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="4" column="0" colspan="2">
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="20" column="0" colspan="2">
+       <widget class="Line" name="line_8">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="12" column="0" colspan="2">
+       <widget class="Line" name="line_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0" colspan="2">
+       <widget class="Line" name="line_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="17" column="0" colspan="2">
+       <widget class="Line" name="line_7">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="Line" name="line_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="15" column="0" colspan="2">
+       <widget class="Line" name="line_6">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="22" column="0" colspan="2">
+       <widget class="Line" name="line_9">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="Line" name="line_10">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
+       <widget class="QLineEdit" name="numara_lineEdit"/>
+      </item>
+      <item row="16" column="1">
        <widget class="QComboBox" name="kitaplik_comboBox">
         <item>
          <property name="text">
@@ -385,84 +351,99 @@
         </item>
        </widget>
       </item>
-      <item>
-       <spacer name="horizontalSpacer_7">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+      <item row="1" column="0">
+       <widget class="QLabel" name="id_label">
+        <property name="text">
+         <string>ID</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
-      <item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="kitap_ismi_label">
+        <property name="text">
+         <string>Kitap İsmi</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="isim_soyisim_label">
+        <property name="text">
+         <string>İsim - Soyisim</string>
+        </property>
+       </widget>
+      </item>
+      <item row="21" column="0">
+       <widget class="QLabel" name="kitap_son_teslim_tarihi_label">
+        <property name="text">
+         <string>Kitap Son Teslim Tarihi
+Yıl / Ay / Gün
+Örnek: 2023/05/28</string>
+        </property>
+       </widget>
+      </item>
+      <item row="14" column="0">
+       <widget class="QLabel" name="kitap_yazari_label">
+        <property name="text">
+         <string>Kitap Yazarı</string>
+        </property>
+       </widget>
+      </item>
+      <item row="19" column="0">
        <widget class="QLabel" name="kitap_rafi_label">
         <property name="text">
          <string>Kitap Rafı</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QComboBox" name="kitap_rafi_comboBox">
-        <item>
-         <property name="text">
-          <string>1</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>2</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>3</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>4</string>
-         </property>
-        </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="sinif_label">
+        <property name="text">
+         <string>Sınıf</string>
+        </property>
        </widget>
       </item>
-      <item>
-       <spacer name="horizontalSpacer_8">
+      <item row="16" column="0">
+       <widget class="QLabel" name="kitaplik_label">
+        <property name="text">
+         <string>Kitaplık</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="0">
+       <widget class="QLabel" name="numara_label">
+        <property name="text">
+         <string>Numara</string>
+        </property>
+       </widget>
+      </item>
+      <item row="11" column="1">
+       <widget class="QLineEdit" name="kitap_ismi_lineEdit"/>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="Line" name="line">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="kitap_son_teslim_tarihi_label">
-        <property name="text">
-         <string>Kitap Son Teslim Tarihi (Yıl/Ay/Gün şeklinde (2023/05/28 gibi))</string>
-        </property>
        </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="kitap_son_teslim_tarihi_lineEdit"/>
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <spacer name="horizontalSpacer_9">
+    <item row="2" column="0">
+     <widget class="QPushButton" name="btnKayitEkle">
+      <property name="text">
+       <string>Kayıt Ekle</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <spacer name="verticalSpacer">
       <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+       <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>40</width>
-        <height>20</height>
+        <width>20</width>
+        <height>40</height>
        </size>
       </property>
      </spacer>
