Arayüz font büyüklüğü 8'den 10'a çıkarıldı.

--- a/lib/pop-window/kayit_ekle.ui
+++ b/lib/pop-window/kayit_ekle.ui
@@ -7,20 +7,25 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>412</height>
+    <height>440</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>700</width>
-    <height>412</height>
+    <height>440</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>700</width>
-    <height>412</height>
+    <height>440</height>
    </size>
+  </property>
+  <property name="font">
+   <font>
+    <pointsize>10</pointsize>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Kayıt Ekle</string>
