--- a/lib/pop-window/kayit_sil.ui
+++ b/lib/pop-window/kayit_sil.ui
@@ -22,6 +22,11 @@
     <height>120</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>10</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Kayıt Sil</string>
   </property>
