--- a/lib/window/window.ui
+++ b/lib/window/window.ui
@@ -16,6 +16,11 @@
     <height>600</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>10</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Kütüphane Yönetim Sistemi</string>
   </property>
