--- a/lib/pop-window/kayit_ara.ui
+++ b/lib/pop-window/kayit_ara.ui
@@ -10,6 +10,11 @@
     <height>879</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>10</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Kayıtlarda Ara</string>
   </property>
