--- a/lib/pop-window/kitap_ara.ui
+++ b/lib/pop-window/kitap_ara.ui
@@ -16,6 +16,11 @@
     <height>720</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>10</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Kitaplarda Ara</string>
   </property>
